<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="@dimen/logo_height"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@id/login_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/login_title"
            style="@style/auth_text_view"
            android:text="@string/login_label"
            app:layout_constraintBottom_toTopOf="@id/login_edit_text"
            app:layout_constraintStart_toStartOf="@id/login_edit_text"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/login_edit_text"
            style="@style/edit_text"
            android:autofillHints="emailAddress"
            android:hint="@string/login_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@id/password_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/password_title"
            style="@style/auth_text_view"
            android:text="@string/password_label"
            app:layout_constraintBottom_toTopOf="@id/password_edit_text"
            app:layout_constraintStart_toStartOf="@id/password_edit_text"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/password_edit_text"
            style="@style/edit_text"
            android:autofillHints="password"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_edit_text"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/illegal_login_or_password"
            style="@style/auth_text_view"
            android:text="@string/illegal_login_or_password"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/password_edit_text"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text" />

        <Button
            android:id="@+id/login_button"
            style="@style/button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/login_button"
            app:layout_constraintBottom_toBottomOf="@id/login_button"
            app:layout_constraintStart_toStartOf="@id/login_button"
            app:layout_constraintEnd_toEndOf="@id/login_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
